--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -1,18 +1,18 @@
 [package]
-name                      = "common-multipart-rfc7578"
-description               = "An implementation of multipart/form-data (RFC7578)"
-authors                   = ["Ferris Tseng <ferristseng@fastmail.fm>"]
-documentation             = "https://docs.rs/common-multipart-rfc7578"
-repository                = "https://github.com/ferristseng/rust-multipart-rfc7578"
+name                      = "izihawa-common-multipart"
+description               = "An implementation of multipart/form-data"
+authors                   = ["Ferris Tseng <ferristseng@fastmail.fm>", "Pasha Podolsky <ppodolsky@me.com>"]
+documentation             = "https://docs.rs/izihawa-multipart"
+repository                = "https://github.com/izihawa/rs-multipart"
 keywords                  = ["multipart", "form", "http"]
 categories                = ["asynchronous", "web-programming"]
-version                   = "0.6.0"
+version                   = "1.0.0"
 readme                    = "../README.md"
 license                   = "MIT OR Apache-2.0"
 edition                   = "2021"
 
 [badges]
-github                    = { repository = "ferristseng/rust-multipart-rfc7578", workflow = "Rust" }
+github                    = { repository = "izihawa/rs-multipart", workflow = "Rust" }
 maintenance               = { status = "passively-maintained" }
 
 [dependencies]
@@ -26,8 +26,7 @@ rand                      = { version = "0.8", features = ["small_rng"] }
 thiserror                 = "1.0"
 
 [dev-dependencies]
-actix-multipart-rfc7578   = { path = "../actix" }
 futures-util              = { version = "0.3", default-features = false, features = ["std"] }
 hyper                     = "0.14"
-hyper-multipart-rfc7578   = { path = "../hyper" }
-tokio                     = { version = "1", features = ["macros"] }
+izihawa-hyper-multipart   = { path = "../hyper" }
+tokio                     = { version = "1", features = ["macros", "rt"] }
